--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:create": "node src/lib/dbSetup.js",
-    "db:seed": "node src/lib/dbSeed.js"
+    "db:setup": "next src/config/dbSetup.js",
+    "db:seed": "next src/config/dbSeed.js"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
